# NetBackupSentinel

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
NetBackupSentinel/: Playground.ipynb
NetBackupSentinel/core/: settings.py  urls.py
NetBackupSentinel/core/static/assets/js/: main.js
NetBackupSentinel/core/templates/crud/: create_update.html
NetBackupSentinel/core/templates/includes/: footer.html  form.html  header.html  modal.html  scripts.html  sidebar.html
NetBackupSentinel/core/templates/layouts/: base.html
NetBackupSentinel/dashboard/: urls.py  views.py
NetBackupSentinel/dashboard/templates/: dashboard.html
NetBackupSentinel/ndam/: admin.py  apps.py  fields.py  forms.py  models.py  signals.py  urls.py  views.py
NetBackupSentinel/ndam/devices/: base.py  exceptions.py  mikrotik.py
NetBackupSentinel/ndam/migrations/: 0001_initial.py  0002_alter_device_id_alter_devicebackup_id_and_more.py  0003_device_enabled.py  0004_alter_device_options_remove_device_last_backup_and_more.py
NetBackupSentinel/ndam/templates/device/: create.html  home.html
diagrams/: scratch.tldr
